Update: Migrated from building URIs/URLs to using uri.Builder